<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/mainActivityPadding"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_government" />

            <TextView
                android:id="@+id/govt_kar_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nav_header_subtitle"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/monitr_system_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="WPP Status Monitoring System"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/operator_button"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/mainActivityPadding"
                android:layout_marginRight="@dimen/mainActivityPadding"
                android:layout_weight="1"
                android:text="@string/operator_buttontext" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3" />

            <Button
                android:id="@+id/supervisor_button"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/mainActivityPadding"
                android:layout_marginRight="@dimen/mainActivityPadding"
                android:layout_weight="1"
                android:text="@string/supervisor_buttontext" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3" />

            <Button
                android:id="@+id/dashboards_button"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/mainActivityPadding"
                android:layout_marginRight="@dimen/mainActivityPadding"
                android:layout_weight="1"
                android:text="@string/dashboards_buttontext" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>