<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorWhite">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/card_view_marginleft"
                android:layout_marginTop="@dimen/card_view_margintop"
                android:layout_marginRight="@dimen/card_view_marginleft"
                android:layout_marginBottom="@dimen/card_view_margintop"
                android:orientation="vertical">


                <TableRow android:layout_marginTop="5dp">

                    <TextView
                        style="@style/operatorTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:drawableLeft="@drawable/ic_operatorid"
                        android:text="Plant Id :" />

                    <TextView
                        android:id="@+id/operatorid_value"
                        style="@style/operatorTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="testing testing testing testing" />
                </TableRow>
                <TableRow android:layout_marginTop="5dp">

                    <TextView
                        style="@style/operatorTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:drawableLeft="@drawable/ic_person"
                        android:text="Village :" />

                    <TextView
                        android:id="@+id/operatorname_value"
                        style="@style/operatorTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="testing testing testing testing" />
                </TableRow>


                <!--<TableRow android:layout_marginTop="5dp">-->

                <!--<TextView-->
                <!--style="@style/operatorTextView"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_weight="0.75"-->
                <!--android:drawableLeft="@drawable/ic_mobile"-->
                <!--android:text="@string/mobile_number" />-->

                <!--<TextView-->
                <!--android:id="@+id/operatormobile_value"-->
                <!--style="@style/operatorTextView"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_weight="1" />-->
                <!--</TableRow>-->

                <!--<TableRow android:layout_marginTop="5dp">-->

                <!--<TextView-->
                <!--style="@style/operatorTextView"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="0.75"-->
                <!--android:drawableLeft="@drawable/ic_location"-->
                <!--android:text="@string/location" />-->

                <!--<TextView-->
                <!--android:id="@+id/plant_location"-->
                <!--style="@style/operatorTextView"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_weight="1" />-->
                <!--</TableRow>-->
                <!--<TableRow android:layout_marginTop="5dp">-->

                <!--<TextView-->
                <!--style="@style/operatorTextView"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="0.75"-->
                <!--android:drawableLeft="@drawable/ic_operatorid"-->
                <!--android:text="Plant Id" />-->

                <!--<TextView-->
                <!--android:id="@+id/plantId_value"-->
                <!--style="@style/operatorTextView"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="testing testing testing testing" />-->
                <!--</TableRow>-->

            </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_plantFailure"
                        style="@style/operatorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/failurelabel" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/failure_radiogroup"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_nopower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nopower" />

                            <RadioButton
                                android:id="@+id/radio_nowater"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/nowater" />

                            <RadioButton
                                android:id="@+id/radio_breakdown"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/plantbreakdown" />
                        </RadioGroup>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/label_rwtanklevel"
                        style="@style/operatorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rwtl" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/rwtank_level1"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/operator_button_height"
                            android:layout_weight="1"
                            android:background="@drawable/edittext_bg"
                            android:text="LOW" />

                        <Button
                            android:id="@+id/rwtank_level2"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/operator_button_height"
                            android:layout_weight="1"
                            android:background="@drawable/edittext_bg"
                            android:text="HALF" />

                        <Button
                            android:id="@+id/rwtank_level3"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/operator_button_height"
                            android:layout_weight="1"
                            android:background="@drawable/edittext_bg"
                            android:text="FULL" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/label_twtanklevel"
                style="@style/operatorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/twtl" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/twtanklevel1"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/operator_button_height"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg"
                    android:text="LOW" />

                <Button
                    android:id="@+id/twtanklevel2"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/operator_button_height"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg"
                    android:text="HALF" />

                <Button
                    android:id="@+id/twtanklevel3"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/operator_button_height"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg"
                    android:text="FULL" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_volumedispensed"
                        style="@style/operatorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/volume_disposed" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/volumedisposed_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_bg"
                            android:hint="Please enter a value"
                            android:inputType="number"
                            android:padding="5dp"
                            android:textColor="@color/colorBlack"></EditText>

                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/volumedispensedCamera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:paddingTop="20dp"
                    android:src="@drawable/ic_camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_twtds"
                        style="@style/operatorTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twtds" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/twtds_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittext_bg"
                            android:hint="Please enter a value"
                            android:inputType="number"
                            android:padding="5dp"
                            android:textColor="@color/colorBlack"></EditText>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/operator_submit_button"
                style="@style/AppTheme.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="SUBMIT" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>